Fixed overall layout. Need to work on fixing the fonts and spacing for Desktop design

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,50 +2,91 @@
   margin: 0;
 }
 
-.main-container {
-  display: grid;
-  width: 100%;
-  grid-template-columns: 1fr;
-  grid-template-rows: auto 2fr 2fr auto;
-  grid-template-areas:
-    "header"
-    "graphics"
-    "content"
-    "footer";
+.heading {
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+}
+
+.body-text {
+  font-family: "Open Sans", sans-serif;
+}
+
+.body-text p {
+  font-weight: 400;
+  color: hsl(0, 0%, 50%);
+}
+
+.body-text button {
+  font-weight: 700;
 }
 
 /* Desktop Design*/
 @media only screen and (min-width: 501px) {
   .main-container {
     display: grid;
-
-    grid-template-columns: auto 1fr;
+    grid-template-columns: 1fr 1fr;
+    grid-column-gap: 50px;
+    width: 1440px;
+    height: 700px;
+    margin: auto;
+    /* grid-template-columns: auto 1fr;
     grid-template-rows: auto 1fr auto;
     grid-template-areas:
       "graphics header"
       "graphics content"
-      "graphics footer";
+      "graphics footer"; */
   }
 
   header {
-    grid-area: header;
     display: flex;
     justify-content: space-between;
+    margin-top: 50px;
+    margin-right: 50px;
   }
 
-  .content {
-    grid-area: content;
+  .social {
+    display: flex;
+    width: 100px;
+    justify-content: space-around;
   }
 
   .graphics {
-    grid-area: graphics;
+    grid-row: 1/3;
     display: flex;
     justify-content: center;
     background: linear-gradient(45deg, hsl(243, 86%, 85%), hsl(243, 87%, 12%));
   }
 
+  .graphics img {
+    transform: scale(0.7);
+  }
+
+  label.heading {
+    margin-top: 50px;
+    margin-bottom: 30px;
+  }
+
+  .text {
+    margin-top: 50px;
+    margin-bottom: 30px;
+  }
+
+  .early-access {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .sign-up-form {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+  }
+  .content {
+    margin-right: 50px;
+  }
+
   footer {
-    grid-area: footer;
+    grid-column: 1/3;
   }
 }
 
